added all new files

--- a/parcels_seychelles/parcels_seychelles_run.ipynb
+++ b/parcels_seychelles/parcels_seychelles_run.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,20 +32,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: Casting lon data to np.float32\n",
-      "WARNING: Casting lat data to np.float32\n",
-      "WARNING: Flipping lat data from North-South to South-North\n",
-      "WARNING: Casting depth data to np.float32\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Load in the data\n",
     "filenames = {'U': \"/work/gam/oscar/oscar_vel201*.nc\",\n",
@@ -60,29 +49,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Define particle set\n",
     "pset = ParticleSet.from_line(fieldset=fieldset, pclass=JITParticle,\n",
     "                             size=2000,           # releasing N particles\n",
-    "                             start=(46, -9),   # releasing on a line: the start longitude and latitude\n",
-    "                             finish=(47, -9),  # releasing on a line: the end longitude and latitude\n",
+    "                             start=(55, -4.5),   # releasing on a line: the start longitude and latitude\n",
+    "                             finish=(56, -4.5),  # releasing on a line: the end longitude and latitude\n",
     "                             time=datetime(2017, 12, 31, 0))  # releasing at a certain time"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO: Compiled JITParticleAdvectionRK4 ==> /tmp/parcels-20354/6a64863dcf7785d66850bd406e95fa03.so\n",
-      "100% (62208000.0 of 62208000.0) |########| Elapsed Time: 0:10:25 Time:  0:10:25\n"
+      "INFO: Compiled JITParticleAdvectionRK4 ==> /tmp/parcels-20354/a55aa0913994dc8876ab4bf2b91a6615.so\n",
+      " 68% (42768000.0 of 62208000.0) |#####   | Elapsed Time: 0:06:47 ETA:   0:03:16"
      ]
     }
    ],
@@ -91,7 +80,7 @@
     "pset.execute(AdvectionRK4,\n",
     "             runtime=timedelta(days=720),\n",
     "             dt=-timedelta(minutes=5),\n",
-    "             output_file=pset.ParticleFile(name=\"aldabra.nc\", outputdt=timedelta(days=5)));"
+    "             output_file=pset.ParticleFile(name=\"seychelles.nc\", outputdt=timedelta(days=5)));"
    ]
   },
   {
